<resources>
    <string name="app_name">TrendNews</string>

    <string name="apiKey">18434d8a06324694abbfb28c794292d1</string>
    <string name="urlBase">https://newsapi.org/v2/</string>
    <string name="facebook_app_id">484498289113947</string>
    <string name="fb_login_protocol_scheme">fb484498289113947</string>

    <string name="email">Ingrese email</string>
    <string name="password">password</string>
    <string name="login">Login now</string>
    <string name="register">Registrarse como Usuario Nuevo</string>
    <string name="face">Registrarse con Facebook</string>
    <string name="usuario">Ingresa un Usuario</string>
    <string name="pass">Ingresa un password</string>
    <string name="cpassword">Confirma tu password</string>
    <string name="registrar">Register now</string>

    <string name="search">Buscar</string>
    <string name="settings">Config.</string>
    <string name="share">Share</string>
    <string name="close">Cerrar Sesion</string>
    <string name="view">Abrir en Navegador</string>
    <string name="top">Top HeadLines</string>

    <string name="auth_fail">No fue posible autentificar... Intente Nuevamente</string>
    <string name="salirApp">Esta Seguro que desea Salir de la Aplicación?</string>



</resources>
