<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.josue.trendnews.MainActivity">

    <item android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"/>

    <item android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/close"
        android:orderInCategory="100"
        android:title="@string/close"
        app:showAsAction="never"/>
</menu>