<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_bg"
    tools:context=".views.Register">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/mailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/mail_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/userTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/loginDetails"
        app:layout_constraintTop_toBottomOf="@+id/user_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/loginDetails"
        app:layout_constraintTop_toBottomOf="@+id/pass_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/cpassTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/cpassword"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registrar"
        android:text="@string/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/cpass_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bt_bg"
        android:textColor="@color/loginDetailsMed" />

</androidx.constraintlayout.widget.ConstraintLayout>