<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_bg"
    tools:context=".views.Login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/mailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/loginDetails"
        app:layout_constraintTop_toBottomOf="@+id/mail_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColorHint="@color/loginDetails">

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/loginDetails"
            android:textColorHint="@color/loginDetails"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/pass_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bt_bg"
        android:textColor="@color/loginDetails"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/loginDetails" />

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp">
        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:background="@color/loginDetailsMed" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="O"
            android:textColor="@color/loginDetails"
            android:textSize="16sp" />
        <View
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_width="120dp"
            android:layout_marginStart="15dp"
            android:layout_height="1dp"
            android:background="@color/loginDetailsMed" />
    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/face"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_bg"
        android:drawableStart="@drawable/ic_face"
        android:drawablePadding="8dp"
        android:textColor="@color/loginDetails"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>